--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
+Flask-Bcrypt==0.6.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.0
+Flask-WTF==0.10.3
 Flask==0.10.1
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
+py-bcrypt==0.4
 SQLAlchemy==0.9.8
 Werkzeug==0.9.6
+WTForms==2.0.1
