add npm and bower

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,5 +1,5 @@
 [bumpversion]
-files = setup.py ark/__init__.py
+files = setup.py ark/__init__.py package.json bower.json
 tag = True
 commit = True
 current_version = 0.0.3
