--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "NoahsArk",
   "version": "0.0.4",
-  "description": "NoahsArk ========",
-  "main": "index.js",
-  "directories": {
-    "doc": "docs"
-  },
-  "dependencies": {
-    "gulp": "^3.8.10"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "NoahsArk",
+  "dependencies": {},
+  "devDependencies": {
+    "coffee-script": "^1.8.0",
+    "del": "^1.1.1",
+    "gulp": "^3.8.10",
+    "gulp-coffee": "^2.2.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-stylus": "^1.3.4",
+    "nib": "^1.0.4",
+    "yargs": "^1.3.3"
   },
   "repository": {
     "type": "git",
