--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "NoahsArk",
   "dependencies": {},
   "devDependencies": {
+    "browser-sync": "^1.8.3",
     "coffee-script": "^1.8.0",
     "del": "^1.1.1",
     "gulp": "^3.8.10",
     "gulp-coffee": "^2.2.0",
     "gulp-rename": "^1.2.0",
     "gulp-stylus": "^1.3.4",
+    "gulp-uglify": "^1.0.2",
     "nib": "^1.0.4",
     "yargs": "^1.3.3"
   },
