--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+Babel==1.3
+Flask-Babel==0.9
 Flask-Bcrypt==0.6.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.0
@@ -7,6 +9,8 @@ itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
 py-bcrypt==0.4
+pytz==2014.10
+speaklater==1.3
 SQLAlchemy==0.9.8
 Werkzeug==0.9.6
 WTForms==2.0.1
