--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Babel==1.3
 Flask-Babel==0.9
 Flask-Bcrypt==0.6.0
+Flask-Collect==1.2.1
 Flask-Login==0.2.11
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.0
