--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "NoahsArk",
   "dependencies": {},
   "devDependencies": {
+    "bower": "^1.3.12",
     "browser-sync": "^1.8.3",
     "coffee-script": "^1.8.0",
     "del": "^1.1.1",
