--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,5 @@ DEBUG = 0
 SQLALCHEMY_DATABASE_URI = ''
 SECRET_KEY = ''
 COLLECT_STATIC_ROOT = '/srv/ark/static'
+ARK_WEIBO_CONSUMER_KEY = ''
+ARK_WEIBO_CONSUMER_SECRET = ''
