add upload module

--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,6 @@ SECRET_KEY = ''
 COLLECT_STATIC_ROOT = '/srv/ark/static'
 ARK_WEIBO_CONSUMER_KEY = ''
 ARK_WEIBO_CONSUMER_SECRET = ''
+ARK_QINIU_BUCKET = ''
+ARK_QINIU_ACCESS_KEY = ''
+ARK_QINIU_ACCESS_SECRET = ''
