--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,13 @@
-PORT = 5000
-DEBUG = 0
 SQLALCHEMY_DATABASE_URI = ''
 SECRET_KEY = ''
 COLLECT_STATIC_ROOT = '/srv/ark/static'
+
+ARK_PORT = 5000
+ARK_PROXY = 5100
+ARK_DEBUG = 0
 ARK_WEIBO_CONSUMER_KEY = ''
 ARK_WEIBO_CONSUMER_SECRET = ''
 ARK_QINIU_BUCKET = ''
 ARK_QINIU_ACCESS_KEY = ''
 ARK_QINIU_ACCESS_SECRET = ''
+ARK_QINIU_BASE_URL = ''
