fixed bug in bower.json, add jQuery

--- a/bower.json
+++ b/bower.json
@@ -15,8 +15,9 @@
     "tests"
   ],
   "dependencies": {
-    "normalize.css": "~3.0.2"
+    "normalize.css": "~3.0.2",
     "plupload": "~2.1.2",
-    "js-sdk": "git://github.com/qiniu/js-sdk#~1.0.3-beta"
-  },
+    "js-sdk": "git://github.com/qiniu/js-sdk#~1.0.3-beta",
+    "jquery": "~2.1.3"
+  }
 }
