--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
-SQLALCHEMY_DATABASE_URI = ''
 SECRET_KEY = ''
+SENTRY_DSN = ''
+SQLALCHEMY_DATABASE_URI = ''
 COLLECT_STATIC_ROOT = '/srv/ark/static'
 
 ARK_PORT = 5000
