--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Babel==1.3
+blinker==1.3
 Flask-Babel==0.9
 Flask-Bcrypt==0.6.0
 Flask-Collect==1.2.1
@@ -14,6 +15,7 @@ MarkupSafe==0.23
 oauthlib==0.7.2
 py-bcrypt==0.4
 pytz==2014.10
+raven==5.1.1
 speaklater==1.3
 SQLAlchemy==0.9.8
 Werkzeug==0.9.6
