--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "del": "^1.1.1",
     "gulp": "^3.8.10",
     "gulp-coffee": "^2.2.0",
+    "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
     "gulp-stylus": "^1.3.4",
     "gulp-uglify": "^1.0.2",
