--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "normalize.css": "~3.0.2",
     "plupload": "~2.1.2",
-    "jquery": "~2.1.3"
+    "jquery": "~2.1.3",
+    "jcrop": "~0.9.12"
   }
 }
