--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "normalize.css": "~3.0.2",
     "plupload": "~2.1.2",
     "jquery": "~2.1.3",
-    "jcrop": "~0.9.12"
+    "jcrop": "~0.9.12",
+    "jquery-form": "~3.46.0"
   }
 }
