--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
     "plupload": "~2.1.2",
     "jquery": "~2.1.3",
     "jcrop": "~0.9.12",
-    "jquery-form": "~3.46.0"
+    "jquery-form": "~3.46.0",
+    "jquery-validation": "~1.13.1",
+    "tooltipster": "~3.3.0"
   }
 }
