--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Babel==1.3
 blinker==1.3
 Flask-Babel==0.9
 Flask-Bcrypt==0.6.0
+Flask-Cache==0.13.1
 Flask-Collect==1.2.1
 Flask-Login==0.2.11
 Flask-OAuthlib==0.8.0
