--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,13 @@
+CACHE_TYPE = 'redis'
+CACHE_REDIS_HOST = '127.0.0.1'
+CACHE_REDIS_PORT = '6379'
+CACHE_REDIS_USERNAME = ''
+CACHE_REDIS_PASSWORD = ''
+CACHE_REDIS_DB = '0'
+COLLECT_STATIC_ROOT = '/srv/ark/static'
 SECRET_KEY = ''
 SENTRY_DSN = ''
 SQLALCHEMY_DATABASE_URI = ''
-COLLECT_STATIC_ROOT = '/srv/ark/static'
 
 ARK_PORT = 5000
 ARK_PROXY = 5100
