--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Babel==1.3
 blinker==1.3
+ecdsa==0.11
 Flask-Babel==0.9
 Flask-Bcrypt==0.6.0
 Flask-Cache==0.13.1
@@ -13,8 +14,11 @@ Flask==0.10.1
 itsdangerous==0.24
 Jinja2==2.7.3
 MarkupSafe==0.23
+MySQL-python==1.2.5
 oauthlib==0.7.2
+paramiko==1.15.2
 py-bcrypt==0.4
+pycrypto==2.6.1
 pytz==2014.10
 raven==5.1.1
 redis==2.10.3
