--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,8 @@
 include README.rst LICENSE requirements.txt
 recursive-include ark *.html
+recursive-include ark *.jinja
 recursive-include ark/static *.css
 recursive-include ark/static *.js
 recursive-include ark/static *.svg
 recursive-include ark/static *.png
-recursive-include ark/translations/
+graft ark/translations/
