--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,6 @@
 include README.rst LICENSE requirements.txt
-recursive-include ark *.html
-recursive-include ark *.jinja
+recursive-include ark/templates *.html
+recursive-include ark/templates *.jinja
 recursive-include ark/static *.css
 recursive-include ark/static *.js
 recursive-include ark/static *.svg
